@@ -1,1 +1,2 @@
 DIST nbformat-4.0.0.tar.gz 106427 SHA256 daf9b990e96863d120aff123361156a316757757b81a8070eb6945e4a9774b2d SHA512 60d690ecd8ab9d5712a1dfc26cbf8aded22000f167afe581842720905b8a97ce71bebeb9e0133be5eadc0975563a9dcf6d9302075308461fd2b3e087b3ff94fa WHIRLPOOL 9210fc1278153d65610d396e0b889111ad083ef2667a05fb4faec268ee64762530ebeb60543f1b493eb25c52d7641cba6c620863780c0bb995537efef2f4bc74
+DIST nbformat-4.0.1.tar.gz 105767 SHA256 5261c957589b9dfcd387c338d59375162ba9ca82c69e378961a1f4e641285db5 SHA512 f73e8cffc61825aa8b7b0ef3b842cba51baf2cdf0c5d0035e2e7cb51f71c6c819f09201367a3b342c2736492dee1e78c519961aaea8f2cc4b5e69a1545085d2a WHIRLPOOL 9b08003c456e00c529b7bf8e786d57a583e53e5a1e7e9eb4c3cc492c5b1d60e76579c9102e6c56749d546a9a124d475687d4ec1d71e0f3634698d5e30499db93
